[XL] add many prereqs, get padre to build
git-svn-id: http://svn.perlide.org/padre/trunk/Perl-Dist-XL@9304 bc93166f-e056-4eb9-8c59-0a0840647e1b

--- a/share/files/Config.pm.tmpl
+++ b/share/files/Config.pm.tmpl
@@ -7,7 +7,7 @@ use File::Basename ();
 
 my $cpan;
 BEGIN { 
-	$cpan = File::Basename::dirname( File::Basename::dirname(File::Spec->rel2abs($0)) ) . "/.cpan";
+	$cpan = File::Basename::dirname( File::Basename::dirname(File::Spec->rel2abs(__FILE__)) );
 }
 
 
@@ -46,7 +46,7 @@ $CPAN::Config = {
   'ncftpget' => q[],
   'no_proxy' => q[],
   'pager' => q[/usr/bin/less],
-  'prerequisites_policy' => q[nothing],
+  'prerequisites_policy' => q[follow],
   'scan_cache' => q[atstart],
   'shell' => q[/bin/bash],
   'tar' => q[/bin/tar],
