[XL] connect_to_internet_ok added
git-svn-id: http://svn.perlide.org/padre/trunk/Perl-Dist-XL@9548 bc93166f-e056-4eb9-8c59-0a0840647e1b

--- a/share/files/Config.pm.tmpl
+++ b/share/files/Config.pm.tmpl
@@ -17,6 +17,7 @@ $CPAN::Config = {
   'build_dir' => qq[$cpan/build],
   'cache_metadata' => q[1],
   'commandnumber_in_prompt' => q[1],
+  'connect_to_internet_ok' => q[no],
   'cpan_home' => qq[$cpan],
   'dontload_hash' => {  },
   'ftp' => q[/usr/bin/ftp],
