[XL] process more of the template files
git-svn-id: http://svn.perlide.org/padre/trunk/Perl-Dist-XL@9549 bc93166f-e056-4eb9-8c59-0a0840647e1b

--- a/share/files/padre.sh.tmpl
+++ b/share/files/padre.sh.tmpl
@@ -9,6 +9,6 @@ path_to_perl=`perl -MCwd -MFile::Basename -e 'print dirname(dirname(Cwd::abs_pat
 export PERL5LIB=
 export PERLLIB=
 export PERL_MM_USE_DEFAULT=
-export LD_LIBRARY_PATH=$path_to_perl/lib/site_perl/5.10.1/i686-linux-thread-multi/Alien/wxWidgets/gtk_2_8_10_uni/lib/:$LD_LIBRARY_PATH
+export LD_LIBRARY_PATH=$path_to_perl/lib/site_perl/PERL_VERSION/i686-linux-thread-multi/Alien/wxWidgets/gtk_2_8_10_uni/lib/:$LD_LIBRARY_PATH
 
 $path_to_perl/bin/perl $path_to_perl/bin/padre $@
